# UI-Element-Detection-in-GUI-Images-Haritonov-Rares

./: .gitignore  README.md  download_weights.py  pyproject.toml  requirements.txt
configs/experiments/: fasterrcnn_mobilenet_uicvd_unified3.yaml  fasterrcnn_r50_v2_gengui_gengui13.yaml  fasterrcnn_r50_v2_gengui_unified3.yaml  fasterrcnn_r50_v2_uicvd_uicvd16.yaml  fasterrcnn_r50_v2_uicvd_unified3.yaml  fasterrcnn_r50_v2_vins_unified3.yaml  fasterrcnn_r50_v2_vins_vins13.yaml  rfdetr_m_gengui_gengui13.yaml  rfdetr_m_uicvd_uicvd16.yaml  rfdetr_m_vins_vins13.yaml  rtdetr_l_gengui_gengui13.yaml  rtdetr_l_gengui_unified3.yaml  rtdetr_l_uicvd_uicvd16.yaml  rtdetr_l_uicvd_unified3.yaml  rtdetr_l_vins_unified3.yaml  rtdetr_l_vins_vins13.yaml  smoke_yolov8n_uicvd_uicvd16.yaml  yolo11n_gengui_gengui13.yaml  yolo11n_gengui_unified3.yaml  yolo11n_uicvd_uicvd16.yaml  yolo11n_vins_vins13.yaml  yolo26n_gengui_gengui13.yaml  yolo26n_uicvd_uicvd16.yaml  yolo26n_vins_vins13.yaml  yolov12n_gengui_gengui13.yaml  yolov12n_uicvd_uicvd16.yaml  yolov12n_vins_vins13.yaml  yolov8n_gengui_gengui13.yaml  yolov8n_gengui_unified3.yaml  (+8 more)
demo/: app.py
kaggle/: uidet_fasterrcnn_gengui13.ipynb  uidet_fasterrcnn_uicvd16.ipynb  uidet_fasterrcnn_vins13.ipynb  uidet_rfdetr_gengui13.ipynb  uidet_rfdetr_uicvd16.ipynb  uidet_rfdetr_vins13_colab.ipynb  uidet_rtdetr_gengui13.ipynb  uidet_rtdetr_uicvd16.ipynb  uidet_rtdetr_vins13.ipynb  uidet_rtdetr_vins13_colab.ipynb
scripts/: _prepare_common.py  prepare_all.sh  prepare_gengui.py  prepare_uicvd.py  prepare_vins.py  summarize_runs.py  to_rfdetr_layout.py
(+25 files in other folders)
