[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uidet"
version = "0.1.0"
description = "UI element detection from GUI images (Bachelor's thesis)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Rares Haritonov", email = "haritonovrares@gmail.com" }]
license = { text = "MIT" }
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
